同步于: 12月6日9时2分

--- a/pages/p1/954855.md
+++ b/pages/p1/954855.md
@@ -1,4 +1,4 @@
-### 北宋皇帝亲自出6道题 难倒无数才子(组图)
+### 再爆中国处理疫情不当 检测试剂涉腐败(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="宋徽宗绘《唐十八学士》局部" src="https://img2.secretchina.com/pic/2019/6-25/p2454151a458442205-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="中國疫苗 武漢肺炎 造假" src="https://img3.secretchina.com/pic/2020/12-6/p2832431a602562675-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   宋徽宗是画家，是诗人，是书法家。图为宋徽宗绘《唐十八学士》局部。（图片来源：国立故宫博物院）
+   美媒再爆中国处理疫情不当，检测试剂涉腐败。（图片来源：自由亚洲电台）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,76 +29,36 @@
   </div>
  </div>
  <p>
-  对于
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/宋徽宗" target="_blank">
-    宋徽宗
-   </span>
-  </strong>
-  ，他作为
-  <strong>
-   皇帝
-  </strong>
-  丢了江山，并非明君所为，这是他的失败。而如果作为一个普通人，他又是那么的迷人。
+  【看中国2020年12月6日讯】继美国有线电视新闻网（CNN）早前披露“武汉文件”，揭露中国政府隐瞒丶处理疫情不当后，美联社也发表调查报道，直指疫情初期检测试剂短缺问题源自腐败和不透明，导致科学家无法准确预测病毒蔓延速度，造成严重后果。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  我们都知道，除却君王，他是画家，是诗人，是书法家，是运动员，甚至是一个完美的情人，父辈打下来的江山正值盛世，国泰民安，他倒也简单天真，顺势把全部的心思用在了自己热爱的事情上，
-  <span href="https://www.secretchina.com/news/gb/tag/赵佶" target="_blank">
-   赵佶
+  在饱受
+  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
+   新冠肺炎
   </span>
-  过的日子应该是所有艺术家梦想中的生活。那个时代，是洋溢着墨香和浓浓的文艺范儿的。
+  肆虐之苦后，中国似乎正逐步从伤痛中走出，进入后疫情期的嘉奖工作。首先分离和鉴定武汉海鲜市场新冠病毒的中国疾控中心病毒病所应急技术中心主任谭文杰早前晋升为中国国家新冠病毒中心首任主任；成功研发出新冠病毒基因诊断试剂盒的中国医药集团也获表彰。然而，美联社3日发布的一篇调查报道解密了这些荣誉背后的秘密交易。
  </p>
  <p>
-  宋徽宗最大的举措之一便是担任了“翰林图画院”院长，放着
-  <span href="https://www.secretchina.com/news/gb/tag/皇帝" target="_blank">
-   皇帝
+  <strong>
+   从默默无闻到垄断试剂盒市场
+  </strong>
+ </p>
+ <p>
+  报道披露，疫情初期，原本“默默无闻”的中国医药集团旗下子公司捷诺生物（GeneoDx Biotech）丶上海辉睿生物(Huirui Biotechnology）和上海伯杰医疗科技公司(BioGerm Medical Technology）“走后门”，各以100万元人民币购得中国疾控中心的
+  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
+   新冠病毒
   </span>
-  不当，兢兢业业地当起美术教授，编写教材，亲自授课，培养美术人才。
+  (又称中共病毒，COVID-19)相关数据及独家销售权，并在中国国家卫健委丶中国疾控中心的“保驾护航”下，垄断了新冠病毒检测试剂盒市场。
  </p>
  <p>
-  为了把最优秀的人才吸收到画院，徽宗建立考试制度，正式纳入科举考试之中，称“绘画试”。分佛道、人物、山水、鸟兽、花竹、屋木六科，摘古人诗句作为考题，要求考生画出诗句的意境，构思巧妙，不落俗套，做到笔意俱全。
+  中国红十字基金会大病救助专案前高管任瑞红接受采访时强调，稳妥控制大流行的首要步骤就是检测，垄断现象会带来严重影响。
  </p>
  <p>
-  不仅如此，宋徽宗还亲自出考题，亲自主考，亲自批卷，专业素质、创新意识考查样样不落下，综合素质过硬才能被录取进入画院。
- </p>
- <p>
-  <strong>
-   考题一：野渡无人舟自横
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此题取自唐朝诗人韦应物的《滁州西涧》。应试者大多画一空舟系于涧边，或者画一鹭鸶立于船上，或者画一鸟落在船杆……
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  受到赵佶赏识的却是这样一幅画面，一个卧于船头的船夫，寂寞失落，百无聊赖。作者意在说明此水无人过渡，连摆渡之人也无聊，打起瞌睡来。既突出无乘客，又突出无人“渡”，紧扣诗句。
+  “没有一个准确的检测的话，那么这个病的控制丶治疗都无从谈起。如果试剂检测盒出现问题，就会对整个流行病的控制出现严重困扰，这是毫无疑问的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +74,7 @@
  </center>
  <p>
   <strong>
-   考题二：踏花归去马蹄香
+   中国官方百般偏袒为哪般？
   </strong>
  </p>
  <center>
@@ -130,7 +90,7 @@
   </div>
  </center>
  <p>
-  这个题目也是独具匠心的。如何表现“踏花归来马蹄香”中的“香”？
+  美联社的文章提到，按照正常程序，中国疾控中心需要在认定病原体后，把测试设计及所需原料寄往全国各实验室，作检测试剂开发。值得注意的是，该中心1月3日发现新冠病毒基因序列；病毒病所应急技术中心4日完成检测试剂设计。随后，疾控中心选择隐瞒相关信息，敲定“技术转让”协议，将设计提供给上述3家上海公司，过程一直保密。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +105,7 @@
   </div>
  </center>
  <p>
-  考生们抓耳挠腮，煞费苦心：“香”是抽象的，只能用鼻子闻到，不能用眼睛看到，怎么画出来？
+  为了“协助”这3家公司，中国疾控中心设下繁文缛节，试图妨碍其他科学家丶竞争机构和企业自主研发检测试剂。在1月10日的一次秘密评估中，更是只批准了捷诺丶辉睿和伯杰制造的测试试剂。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +120,7 @@
   </div>
  </center>
  <p>
-  有的画家绞尽了脑汁，在“踏花”二字上下功夫，画面上画了许许多多的花瓣儿，一个人骑着马在花瓣儿上行走，表现出游春的意思；有的画家煞费苦心在“马”字上下功夫，画面上的主体是一位跃马扬鞭的少年，在黄昏疾速归来；有的画家运思独苦，在“蹄”字上下功夫，在画面上画了一只大大的马蹄子，特别醒目。
+  美联社的文章说，捷诺丶辉睿和伯杰作为没有经验丶资源的“关系户”，与北京丶上海疾控中心的研究员有深厚联系。例如，上海伯杰的创始人赵百慧曾任上海疾控中心微生物实验室首席技术员一职。捷诺因棣属中国国企而享有特殊待遇，利用外国技术丶大量进口外国产品扩展业务，还曾与中国疾控中心合办培训。辉睿则与中国疾控中心病毒病所应急技术中心主任谭文杰保有长久合作关系。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +135,7 @@
   </div>
  </center>
  <p>
-  赵佶看了，都很不满意。
+  一位因安全考量不愿透露姓名的医药界人士向记者介绍了检测试剂市场的利益链。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +150,7 @@
   </div>
  </center>
  <p>
-  只有一位画家独具匠心，他不是单纯着眼于诗句中的个别词，而是在全面体会诗句含义的基础上着重表现诗句末的“香”字。他的画面是：在一个夏天的落日近黄昏的时刻，一个游玩了一天的官人骑着马回归乡里，马儿疾驰，马蹄高举，几只蝴蝶追逐着马蹄蹁跹飞舞。
+  “哪家公司新开发了以前没有的检测试剂就可以根据灵敏度丶准确性向卫健委提出产品的行业标准。如果这家公司大，技术好，就可以把行业标准定很高，尽可能减少竞争对手。至于谁来制定标准，就要看谁跟管理部门走得近。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +165,37 @@
   </div>
  </center>
  <p>
-  这位考生当然这脱颖而出，以榜首的位置入选画院。
+  任瑞红也分析，官方出于经济和政治上的考量，希望企业在政府绝对控制下进行研发。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “流行病期间，检测试剂盒的开发具有巨大的市场效益，背后都会有一个比较雄厚的白手套背景。疾控中心会对一些特定公司给予特定照顾，就有可能会想隐瞒这个病毒的序列，还有其他科学资料，不愿意让更多企业介入到机密的核心资料。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  她感叹，科技领域企业的运转如果不是基于市场而是国家政策垄断的话，出现各式腐败也是意料之中，可惜最后买单的往往都是老百姓。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +211,7 @@
  </center>
  <p>
   <strong>
-   考题三：竹锁桥边卖酒家
+   不争气？检测试剂盒质量强差人意
   </strong>
  </p>
  <center>
@@ -237,7 +227,7 @@
   </div>
  </center>
  <p>
-  这是画院的著名试题之一。众多考生皆重于酒家，以小溪流水、野渡小桥、竹林清风等藉以衬托，皆不中赵佶之意。
+  美联社的报道认为，中国官方的一系列操作造成1月5日至17日期间零新增病例记录。虽然捷诺丶辉睿和伯杰得“贵人相助”，生产的检测试剂盒质量却不达标，测试结果要么没有定论，要么就是假阴性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -252,7 +242,7 @@
   </div>
  </center>
  <p>
-  唯有一名叫李唐的画家，独辟蹊径，画了一泓溪水，小桥横卧，桥边则是一片竹林，唯有那郁郁葱葱的翠竹中，挂着一幅迎风招展的酒帘。
+  据了解，新冠病毒检测的假阴性比例大约在2%到37%以上。一份3月的临床试验报告显示，在当时所有获认证的测试试剂中，捷诺表现最差，其次是伯杰。深圳某位医生2月抽取213名使用捷诺试剂的患者样本中，发现假阴性结果比率超过30％。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,7 +257,22 @@
   </div>
  </center>
  <p>
-  赵佶看后大悦，认为酒家藏在竹林中正符合“锁”字的意境，亲自圈点为第一名。
+  上述的业界人士解释，检测试剂出现假阴性结果不可避免，不过，中国确实有不少实力相当的生物技术公司，只要公平竞争，检测试剂水准可以提高。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “做检测试剂有两个重要指标。一个是敏感度，就是样本里的病毒核酸能否被检测到，如果敏感度不够，就会出现假阴性。第二是准确度。病毒核酸序列虽然有特异性，但过于敏感的检测试剂因为会把类似的核酸片段误诊为病毒核酸，这样就出现了假阳性。假阴性低的，说明敏感度高；敏感度高，就有可能假阳性高。两个指标会有这样的矛盾关系，要做到同时敏感又准确需要相当功底。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -283,7 +288,7 @@
  </center>
  <p>
   <strong>
-   考题四：深山藏古寺
+   假阴性？假阳性？
   </strong>
  </p>
  <center>
@@ -299,7 +304,7 @@
   </div>
  </center>
  <p>
-  这个题目要画好并不容易，画中的古寺要“藏”起来，又要让人觉得它是存在的。
+  任瑞红告诉记者，确诊新冠肺炎病例不应仅仅依靠检测试剂盒，还要考量病人的发病丶接触史，医护人员取样程序是否正确等。若摒除其他导致假阴性结果因素，单单聚焦于试剂盒质量本身，30%的假阴性则意味着试剂盒无效。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,7 +319,7 @@
   </div>
  </center>
  <p>
-  有的考生在山腰画座古庙，半遮半露，总算有“藏”的意思……
+  由于试剂盒严重短缺外加失效，检测人员当时也不愿冒险使用随后被证实更有效丶却未获中国疾控中心“认证”的试剂盒。美联社的报道表示，问题试剂盒让科学家和政府官员忽略了病毒的传染速度。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -329,7 +334,7 @@
   </div>
  </center>
  <p>
-  有的在丛林深处画座古庙，有的只画出庙的一角或一段残垣断壁……
+  报道引述伦敦帝国理工学院估算，以1月31日为例，武汉只有19人被检测出阳性，更多呈现假阴性或因试剂短缺而无法接受测试的潜在病毒携带者则返回家中。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -344,37 +349,7 @@
   </div>
  </center>
  <p>
-  主考官一连看了很多幅，都不满意，有一幅画深深吸引了他，他再仔细端详了一番，便连连点头称赞，说：“好，好，这才是‘魁选’之作呀！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  那幅画好在哪里呢？那位高明的画家，根本没有画庙，画的是崇山峻岭之中一股清泉飞流而下，泉边有个老态龙钟的和尚，正一瓢一瓢地舀水。就这么一个挑水的和尚，就把“深山藏古寺”的题目表现得透彻极了，把“藏”字表现出来了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  和尚挑水，当然是用来烧茶煮饭，洗衣浆衫，这就叫人想到附近一定有庙；和尚年迈，还得自己来挑水，可以想像到那庙是座破败的古庙了。庙一定是在深山中，画面上看不见，这就把“藏”字表现出来了。这幅画比起那些画庙的一角或庙的一段墙垣的，更切合“深山藏古寺”的题意。
+  在谈到假阳性或假阴性检测结果可能造成的后果时，任瑞红表示：“这就意味着一些明明已经患了新冠肺炎的人，（以为自己健康）而正常生活，继而感染其他人，进一步扩大大流行；或者一个没有患新冠肺炎的病人，测试出感染了病毒而要进行治疗，对身体造成伤害。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -390,7 +365,7 @@
  </center>
  <p>
   <strong>
-   考题五：嫩绿枝头红一点
+   劣质检测试剂盒的受害者
   </strong>
  </p>
  <center>
@@ -406,7 +381,7 @@
   </div>
  </center>
  <p>
-  “嫩绿枝头红一点”，应该还算好表达，难就难在题目还有后半句“恼人春色不须多”。如何表现这种春色不须多的境界呢？
+  美联社的报道还介绍了一位劣质试剂盒的受害者。39岁的武汉教师彭毅（音译，Peng Yi）早早发现新冠症状的他在医院苦等8个小时就诊。基于核酸检测呈阳性才能住院的规定，纵使CT结果发现彭毅双肺已受病毒感染，他依旧无法入院治疗。7天后，彭毅接受核酸检测，结果是阴性。家属恳求有关方面对身体情况并未好转的彭毅进行二次测试无果。5天过去，彭毅接受第二次检测，结果由阴转正，但为时已晚，彭毅最终在几周后离世。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -425,38 +400,8 @@
   </ins>
  </center>
  <p>
-  中规中矩的答案就是这样的，直接在绿叶上画了朵红花，或是一丛绿叶中露出朵红花。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但有位画家画了绿树中里一个亭阁，一位仕女正倚栏而立，她娇艳的樱桃小口在一片绿的画面中显得明艳照人。便有一动人情思的感觉，把“一点红”的含意作了灵巧恰当的表现。不用说，这位画家凭借这一巧思脱颖而出。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   考题六：蝴蝶梦中家万里
+   专家：疫苗才是“最终兵器”
   </strong>
  </p>
  <center>
@@ -472,7 +417,7 @@
   </div>
  </center>
  <p>
-  此题取自“蝴蝶梦中家万里，杜鹃枝上月三更”，寓意很深。诗句出现“蝴蝶”、“子规（杜鹃）”、“树枝”、“明月”，表达了游子孤眠异乡的空虚寥落心情。
+  台湾世卫外交协会理事长姜冠宇坦言，无论是核酸还是快筛检测，准确率都不是很高，加上新冠肺炎症状不典型，要确诊病例确实存在挑战。他以台湾的检测程序为例表示：“求快（检测）品质就会差。我们都是两套到三套的RT-PCR（实时核酸检测），要遵循两次以上阳性结果，而且不能两次都是弱阳性，不然就要验第三套。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -487,7 +432,7 @@
   </div>
  </center>
  <p>
-  众考生皆不中意，唯一被选中的是王道亨的试卷。
+  姜冠宇补充道，疫苗才是彻底解除新冠肺炎危机的“最终兵器”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -502,7 +447,7 @@
   </div>
  </center>
  <p>
-  王道亨所绘的是苏武牧羊图，画面上苏武假寐，在异国的冰天雪地中，正在打瞌睡，睡梦中一定是千万里远的家乡：林木扶疏，双蝶追逐其间，上立子规，月正当空，木影在地。犹闻啼声。王道亨较好地把握了题目的含义，一举夺魁。
+  “大家去试打疫苗后，然后达到一个族群免疫力，才是一个公共卫生安全的根本。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -517,7 +462,9 @@
   </div>
  </center>
  <p>
-  以上，宋徽宗的考试方式叫“诗题取士”，这让画家们深刻领悟到了“没文化真可怕”这个道理。他们不能再死描死背地画画，而要去读书，从中锻练诗意的想像空间，以更高的层次理解绘画。
+  <strong>
+   中国疫苗再被“打脸”？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -532,25 +479,7 @@
   </div>
  </center>
  <p>
-  但是，你别以为考进来就完事儿了，对于考进来的画家，还得按身份分为“士流”和“杂流”，不断培训不断考核，品德智力等全面发展，再分职称。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="宋徽宗《蜡梅山禽图》" src="https://img2.secretchina.com/pic/2019/6-25/p2454171a579455601-ss.jpg"/>
-  <br>
-   宋徽宗《蜡梅山禽图》是迄今最早一张，“诗、书、画”都是自己原创的作品。（图片来源：国立故宫博物院）
-  </br>
+  日前，英国率先宣布批准美国辉瑞（Pfizer）和德国生技公司BioNTech合作开发的疫苗，让凡事追求快的中国“压力山大”。参与疫苗研发的中国工程院院士王军志4日突然宣布中国“年内将有6亿支灭活疫苗获批上市”，表示“这一次中国灭活疫苗能走在全世界的前面”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -565,11 +494,7 @@
   </div>
  </center>
  <p>
-  比如宋徽宗就曾经要求画院那帮画师，让他们连孔雀要飞起来的时候，先抬左脚还是右脚，这个都要搞清楚。在这样的格物精神下，出现很多写实的画。比如，宋徽宗的《山禽腊梅图》，这张画是迄今最早一张，“诗、书、画”都是自己原创的作品。直接影响了后来一说起传统
-  <span href="https://www.secretchina.com/news/gb/tag/中国画" target="_blank">
-   中国画
-  </span>
-  就必须是“诗、书、画”的三个经典元素。
+  王军志的豪言壮语似乎迎来中国业内人士的“打脸”。中国国药集团中国生物董事长杨晓明向中国《财经国家周刊》提到，新冠疫苗研发仍然面临巨大挑战，很多科学问题需要进一步深入研究才能回答。与此同时，科兴生物董事长尹卫东也说，疫苗的安全性丶有效期丶数量丶供应周期丶储运和接种便利性都将是对疫苗提出的艰巨考验和挑战。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -584,11 +509,7 @@
   </div>
  </center>
  <p>
-  到了公元1126年，金兵攻破汴京，将徽、钦二帝押送北方，汴京被洗劫一空，
-  <span href="https://www.secretchina.com/news/gb/tag/北宋" target="_blank">
-   北宋
-  </span>
-  灭亡，史称“靖康之耻”。
+  世界卫生组织2日公布的消息显示，目前全球共有13款疫苗处于第三期临床试验。美国丶德国预计最快今年年底开始接种。土耳其稍早也披露将在本月中旬使用北京科兴疫苗。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -603,7 +524,9 @@
   </div>
  </center>
  <p>
-  被囚禁期间，宋徽宗受尽精神折磨，写下了许多晦恨、哀怨，凄凉的诗句，“家山回首三千里，目断山南无雁飞”，这一句算是真正体会王道亨所绘苏武牧羊图的真正境界了。
+  <strong>
+   北京科兴陷“行贿门” 疫苗数据要打问号？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -618,7 +541,37 @@
   </div>
  </center>
  <p>
-  于个人，他堪称艺术家，对北宋及中国绘画发展，功不可没，谁也不能否认他在艺术的惊人成就与才华。于国家，昏庸无能，作为一国之主，身负重任，却不务正业。人们总是向往一种完全不同的人生，大风大浪羡慕安宁平静，平淡无奇追求矫情曲折，但事实总逃不过一句“无可奈何”，其实就是逃脱不了神安排的命运，李煜是，赵佶亦是如此。
+  值得注意的是，美国《华盛顿邮报》4日的报道重提北京科兴于2016年卷入的行贿丑闻，引述专家评论说，即便没有证据表明涉及贿赂案的任何疫苗资料存在问题，但事件牵扯医学道德，有必要对科兴的疫苗进行额外审查。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据了解，时任北京科兴生物制品有限公司总经理的尹卫东被举报涉嫌贿赂原中国国家食品药品监督管理总局药品审评中心副主任尹红章，为科兴在药品申报审批等事宜上提供帮助。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  报道说，尹卫东最后没有被起诉。他在一份证词中辩解说，自己无法拒绝监管机构官员提出的资金要求。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -682,13 +635,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/926305.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954855.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954855.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954855.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/06/954855.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/926305.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954855.md' width='0px' height='0px'/>
