--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 夫妻相处之道 攸关家庭兴衰(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,17 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/8-1/p2745212a630026612-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   <strong>
-    夫妻
-   </strong>
-   相处之道，攸关
-   <strong>
-    家庭
-   </strong>
-   兴衰。（图片来源：Adobestock）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -28,80 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.39.94:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.39.94:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.39.94:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.39.94:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.39.94:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.39.94:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.39.94:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  【九評之二】評中國共產黨是怎樣起家的](http://141.164.39.94:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  【透視共產黨合集1】中共如何滲透侵略？如何詭辯卸責？危機脫身四套路](http://141.164.39.94:10000/videos/news/../res/detox/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  古人说：“修身、齐家、治国、平天下。”家庭就是社会的缩影，也是生活的避风港。一个家，始于
   <strong>
-   婚姻
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
+   </span>
   </strong>
-  ，成于磨合，因此
-  <span href="https://www.secretchina.com/news/gb/tag/夫妻" target="_blank">
-   夫妻
-  </span>
-  在其中扮演的角色非常重要。
+  是先人
+  <strong>
+   智慧
+  </strong>
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  一个
-  <span href="https://www.secretchina.com/news/gb/tag/家庭" target="_blank">
-   家庭
-  </span>
-  的好坏，首先就看夫妻是否齐心，能够齐心，才能在困境来临之际，克服万难，安然度过。所以“夫妻”的相处之道将决定家庭的兴衰，也是孩子们学习的榜样，影响的不仅是自己，更是家庭的“命脉”，正所谓“夫妻和，则家庭兴；夫妻离，则家庭分。”
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  <strong>
-   ●靠得越近的夫妻，越容易产生
-   <span href="https://www.secretchina.com/news/gb/tag/矛盾" target="_blank">
-    矛盾
-   </span>
-  </strong>
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  中国是讲究中庸之道的，太过与不及都不好。前阵子疫情严重的时候，中国的离婚率也高，就是因为夫妻整天长时间相处的过程中，起了不少矛盾。无法看开包容的话，到头来就会走上离婚一途。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  这在学街上有个名词，叫做“
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwj0jauV6_nqAhXKyYsBHZWTDNEQmhMwHHoECAUQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%2588%25BA%25E7%258C%25AC&amp;usg=AOvVaw3h2qfpUJTxVsMPzb115wDg">
-   刺猬
-  </span>
-  原则”：在冬天的时候，两只刺猬想抱团取暖，可因为身上的刺太多，互相都会被刺伤，也导致它们不得不分开，就是因为相互之间产生了矛盾。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  夫妻相处就像人与人之间的相处，刚开始热恋，对彼此有好感时，常会腻在一起，甚至把对方当成是人生的“唯一”。可随着时间流逝，对彼此有更多的了解时，可能好感度就会逐渐下降，矛盾越来越多。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一对夫妻到底是“新婚燕尔”，还是“老夫老妻”，并不难看出来。前者是用火热的感情在互动，后者则是用心灵在相互扶持。家庭和睦的夫妻，不会像想抱团取暖的刺猬，更不会用自身的刺去伤害对方。而是把握好分寸，把家庭引入正轨。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,9 +96,9 @@
   </div>
  </center>
  <p>
-  <strong>
-   ●离得越远的夫妻，越容易貌合神离
-  </strong>
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +113,9 @@
   </div>
  </center>
  <p>
-  和过于亲近相比，过分疏远的夫妻关系，也容易变成“名存实亡”的状态。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,11 +130,9 @@
   </div>
  </center>
  <p>
-  许多
-  <span href="https://www.secretchina.com/news/gb/tag/婚姻" target="_blank">
-   婚姻
-  </span>
-  关系不好的夫妻，家庭矛盾也多。一方不愿低头，一方不愿包容对方。这种紧绷的关系，也令本该平和的日子，时刻充斥着“冷战”的氛围。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +147,9 @@
   </div>
  </center>
  <p>
-  这种过分疏远的夫妻关系，很容易形成冷战的气氛。而婚姻最怕的恰恰就是“冷战”，会带给人椎心刺骨的伤害。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,9 +164,31 @@
   </div>
  </center>
  <p>
-  <strong>
-   ●中庸的夫妻之道，才能细水长流
-  </strong>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,10 +207,9 @@
   </ins>
  </center>
  <p>
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjb54Wj6_nqAhVHBKYKHZexCkEQmhMwH3oECAQQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E4%25B8%2589%25E6%25AF%259B_(%25E4%25BD%259C%25E5%25AE%25B6)&amp;usg=AOvVaw1q1ykh-BkX4R7TxhUtN2KK">
-   三毛
-  </span>
-  曾说：“人生有如三道茶，第一道茶，苦若生命；第二道茶，甜若爱情；第三道茶，淡若清风。”
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +224,9 @@
   </div>
  </center>
  <p>
-  这三种“茶”的状态，就像是家庭生活和夫妻关系的象征。日子太苦，容易发生“贫贱夫妻百事哀”的状况，造成家庭鸡犬不宁。而日子太甜，通常也无法持久，只有一瞬间，过了就又回到“淡”这个层面上了。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -236,7 +241,9 @@
   </div>
  </center>
  <p>
-  婚姻，就是当恋情转趋平淡时，夫妻还能相互扶持，共赏人生旅途的风景。那些借口“没感觉”而分手，只想追寻第二春，重温甜蜜恋爱的人，面临的只是永无止境的恶性循环。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -251,7 +258,9 @@
   </div>
  </center>
  <p>
-  朋友相交，就像君子之交淡如水；而许多走过人生风风雨雨的老夫老妻，则是对另一半相敬如宾，不僭越对方的底线，也不侵犯对方隐私，而是互相尊重，就像水一样，源源不断，源远流长。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -266,7 +275,9 @@
   </div>
  </center>
  <p>
-  夫妻相处若能细水长流，家庭也就能在和睦中逐渐兴旺起来。余生，把婚姻过成“茶”，把家庭生活过成“水”，一浸一泡之间，才会拥有一杯茶香四溢、余韵不绝的好茶。
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -280,7 +291,7 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:10px;">
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -298,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="https://img3.secretchina.com/pic/2020/7-29/p2742721a263579567.jpg" width="300px"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -330,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941544.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941544.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941544.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/01/941544.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/941544.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
